# testss

./: .gitignore  pyproject.toml
.github/workflows/: build-and-deploy.yml  test-case.yml
authorizer/: authorize.py
deploy/: .terraform.lock.hcl  api-gateway.tf  auth.tf  authorizer.tf  container-registry.tf  container.tf  main.tf  provider.tf  resoure-manager.tf  sa.tf
deploy/openapi/: api.yml
infrastructure/: api-gateway.tf  auth.tf  container.tf  main.tf  resoure-manager.tf  s3.tf  sa.tf  vars.tf  ydb.tf
infrastructure/api/: Dockerfile
infrastructure/auth/: Dockerfile  docker-compose.yml  requirements.txt
infrastructure/openapi/: frontend.yml
infrastructure/tests/: Dockerfile
project/: Dockerfile
project/src/: main.py
project/src/application/: api.py
requirements/: requirements.txt
services/: api.Dockerfile  auth.Dockerfile
services/api/: json_logger.py  main.py
services/api/application/: app.py  settings.py
services/api/src/schemas/: user.py
services/auth/: Dockerfile  log_config.yml  main.py  requirements.txt
services/auth/alembic/: env.py
services/auth/alembic/versions/: 8a70d4c505e7_init.py  a6607b8f7554_created_peers_table.py
services/auth/application/: api.py  app.py  conf.py  settings.py
services/auth/application/db/: __init__.py  base.py  peers.py
services/auth/application/schemas/: tokens.py
services/auth/src/: backend.py  conf.py  exceptions.py  responses.py  settings.py
services/auth/src/api/: __init__.py  auth.py
services/auth/src/api/oauth/: __init__.py  base.py  vk_oauth.py  yandex_oauth.py
services/auth/src/application/: api.py  app.py
services/auth/src/application/schemas/: log.py
services/auth/src/db/: __init__.py  users.py
services/auth/src/managers/: __init__.py  base.py  files.py  role.py  token.py  user.py
services/auth/src/schemas/: __init__.py  mixins.py  tokens.py  users.py
services/auth/ydb_async/: dialect.py
tests/: Dockerfile  conftest.py  docker-compose.yml  requirements.txt  test_api.py
